style/modalUI.css
#modalPane { 
	background: black;
	color: white;
	height: 100vh;
	width:5em;
	position: fixed;
}

#modalPane.tall { 
	height: 100vh;
	width:5em;
}

#modalPane.wide {  /* n.b.: default */
	top: 0;
	width: 100%;
	height:5em;
}

.constituent { 
	float:left;
	padding-right: 3em;
	max-width: 4em;
	height: 100%;
}

.constituent.active { 
	background: red;
}

#modalPane.tall .constituent img { 
	max-width: 3em;
	max-height: 4em;
}

#modalPane.wide .constituent img { 
	max-height: 3em;
	max-width: 4em;
}

